--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -3,12 +3,12 @@ h2,
 h3,
 h4,
 h5,
-p {
+{
+  font-family: "Shrikhand", cursive;
   margin: 0;
 }
 
 h1 {
-  font-family: 'Shrikhand', cursive;
   font-size: 1.7rem;
 }
 
@@ -21,10 +21,13 @@ a {
   color: black;
 }
 
-/*fonts*/
-
-* {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+p {
+  font-family: "Roboto", sans-serif;
+  margin: 0;
 }
+b {
+  font-family: "Roboto", sans-serif;
+}
+/*fonts*/
 
 @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
